Fixed attribution box misalignment

--- a/people/style.css
+++ b/people/style.css
@@ -38,7 +38,7 @@
 .attribution {
   bottom: 0;
   right: 0;
-  width: 260px;
+  width: 250px;
   font-family: arial;
   font-size: 10px;
   text-align: left;
